[gd_scene load_steps=2 format=3 uid="uid://dvcshj2vx3dnv"]

[ext_resource type="Script" path="res://objects/OptionSlider/scripts/option_slider.gd" id="1_i43cr"]

[node name="OptionSlider" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 553.0
offset_bottom = 40.0
script = ExtResource("1_i43cr")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 15.0
offset_right = 137.0
offset_bottom = 38.0
text = "Option:"

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 17.0
offset_right = 395.0
offset_bottom = 33.0
allow_greater = true
allow_lesser = true

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 408.0
offset_top = 9.0
offset_right = 475.062
offset_bottom = 40.0

[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
